# CS171-final-project

./: CMakeLists.txt  README.md
common/gdt/cmake/: FindOptiX.cmake
common/glfWindow/: CMakeLists.txt  GLFWindow.cpp  GLFWindow.h  tictoc.hpp
configs/: large_mesh.json
example07_firstRealModel/: CMakeLists.txt  LaunchParams.h  Model.cpp  SampleRenderer.cpp  SampleRenderer.h  main.cpp  reservoir.h  sample.cu  sample_2.cu
src/: CMakeLists.txt  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  init_pass.cu  main.cpp  optix_program.cpp  optix_program.h  render_pass.cu  reservoir.h  spatial_reuse_pass.cu
